header-semântico e responsivo

--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Paladino da Sublimação</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap" rel="stylesheet">  
+  <link rel="stylesheet" href="./style.css">
+  <title>Paladino da Sublimação</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+
+  <header>
+    <section class="header-top">
+      <img src="./imgs/logo/logo-principal.png" alt="Logo Paladino" class="logo-paladino">
+      <section class="box-cart">
+        <img src="./imgs/outros/carrinho.png" alt="Logo Carrinho" class="logo-carrinho">
+        <!-- <div class="box-contador1"><p class="contador-carrinho">0</p></div> -->
+      </section>
+      
+    </section>
+    <nav class="header-bot">
+      <label for="search" class="search-label">
+        <img src="./imgs/outros/lupa-azul.png" alt="Lupa" class="logo-lupa"> 
+        <input type="text" name="search" class="search-input" placeholder="digite a sua busca">
+      </label>
+      <section class="box-cart">
+        <img src="./imgs/outros/filtro-branco.png" alt="Filtro" class="logo-filtro"> 
+        <!-- <div class="box-contador2"> <p class="contador-filtro">1</p></div> -->
+      </section>
+
+    </nav>
+  </header>
+
+
+  
+  <script src="./script.js"></script>
 </body>
 </html>
