add-banner-test

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="header-bot">
       <label for="search" class="search-label">
         <img src="./imgs/outros/lupa-azul.png" alt="Lupa" class="logo-lupa"> 
-        <input type="text" name="search" class="search-input" placeholder="digite a sua busca">
+        <input type="text" name="search" class="search-input" placeholder="O que está procurando?">
       </label>
       <section class="box-cart">
         <img src="./imgs/outros/filtro-branco.png" alt="Filtro" class="logo-filtro"> 
@@ -34,6 +34,12 @@
 
     </nav>
   </header>
+
+  <main>
+    <section>
+      <img src="./imgs/outros/banner01.png" alt="banner paladino" class="banner">
+    </section>
+  </main>
 
 
   
