--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="banner-box">
       <img src="./imgs/outros/banner01.png" alt="banner paladino" class="banner">
     </section>
   </main>
