--- a/index.html
+++ b/index.html
@@ -39,7 +39,45 @@
     <section class="banner-box">
       <img src="./imgs/outros/banner01.png" alt="banner paladino" class="banner">
     </section>
+
+    <article class="produtos-box">
+
+      <section class="produtos">
+        <img src="./imgs/produtos/01.caneca.png" alt="caneca" class="produto-img">
+        <p class="produto-nome"> Caneca de Porcelana</p>
+        <p class="produto-tema"> Tema: a escolha</p>
+        <p class="produto-preco"> R$ 35.00 </p>
+        <button class="produto-btn"> Comprar </button>
+      </section>
+
+      <section class="produtos">
+        <img src="./imgs/produtos/cafe.jpg" alt="caneca" class="produto-img">
+        <p class="produto-nome"> Caneca de Porcelana</p>
+        <p class="produto-tema"> Tema: Café</p>
+        <p class="produto-preco"> R$ 30.00 </p>
+        <button class="produto-btn"> Comprar </button>
+      </section>
+
+      <section class="produtos">
+        <img src="./imgs/produtos/01.caneca.png" alt="caneca" class="produto-img">
+        <p class="produto-nome"> Caneca de Porcelana</p>
+        <p class="produto-tema"> Tema: a escolha</p>
+        <p class="produto-preco"> R$ 35.00 </p>
+        <button class="produto-btn"> Comprar </button>
+      </section>
+
+      <section class="produtos">
+        <img src="./imgs/produtos/cafe.jpg" alt="caneca" class="produto-img">
+        <p class="produto-nome"> Caneca de Porcelana</p>
+        <p class="produto-tema"> Tema: Café</p>
+        <p class="produto-preco"> R$ 30.00 </p>
+        <button class="produto-btn"> Comprar </button>
+      </section>
+
+    </article>
   </main>
+
+  <footer> kelvyn khrystian - todos os direitos reservados</footer>
 
 
   
