--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <article class="produtos-box">
 
       <section class="produtos">
-        <img src="./imgs/produtos/01.caneca.png" alt="caneca" class="produto-img">
-        <p class="produto-nome"> Caneca de Porcelana</p>
-        <p class="produto-tema"> Tema: a escolha</p>
-        <p class="produto-preco"> R$ 35.00 </p>
-        <button class="produto-btn"> Comprar </button>
+        <img src="./imgs/produtos/flork.webp" alt="caneca" class="produto-img">
+        <p class="produto-nome"> Almofada</p>
+        <p class="produto-tema"> Tema: Flork Gravida</p>
+        <p class="produto-preco"> R$ 45,00 </p>
+        <button class="produto-btn"> Adicionar ao carrinho </button>
       </section>
 
       <section class="produtos">
@@ -55,7 +55,7 @@
         <p class="produto-nome"> Caneca de Porcelana</p>
         <p class="produto-tema"> Tema: Café</p>
         <p class="produto-preco"> R$ 30.00 </p>
-        <button class="produto-btn"> Comprar </button>
+        <button class="produto-btn"> Adicionar ao carrinho </button>
       </section>
 
       <section class="produtos">
@@ -63,15 +63,15 @@
         <p class="produto-nome"> Caneca de Porcelana</p>
         <p class="produto-tema"> Tema: a escolha</p>
         <p class="produto-preco"> R$ 35.00 </p>
-        <button class="produto-btn"> Comprar </button>
+        <button class="produto-btn"> Adicionar ao carrinho </button>
       </section>
 
       <section class="produtos">
-        <img src="./imgs/produtos/cafe.jpg" alt="caneca" class="produto-img">
-        <p class="produto-nome"> Caneca de Porcelana</p>
-        <p class="produto-tema"> Tema: Café</p>
-        <p class="produto-preco"> R$ 30.00 </p>
-        <button class="produto-btn"> Comprar </button>
+        <img src="./imgs/produtos/azulejo.jpg" alt="caneca" class="produto-img">
+        <p class="produto-nome"> Azulejo</p>
+        <p class="produto-tema"> Tema: Frase motivacional</p>
+        <p class="produto-preco"> R$ 40.00 </p>
+        <button class="produto-btn"> Adicionar ao carrinho </button>
       </section>
 
     </article>
