--- a/index.html
+++ b/index.html
@@ -77,7 +77,22 @@
     </article>
   </main>
 
-  <footer> kelvyn khrystian - todos os direitos reservados</footer>
+  <footer>
+    <section class="footer-box">
+      <section class="informacoes">
+        <p>Loja Virtual Oficial</p>
+        <p>CEP: 65025-630</p>
+        <p>(98) 99105-4292</p>
+      </section>
+      <section class="redes-socias">
+        <img src="./imgs/redes/whatsapp.png" alt="whatsapp" class="footer-img">
+        <img src="./imgs/redes/face.png" alt="facebook" class="footer-img">
+        <img src="./imgs/redes/insta.png" alt="instagram" class="footer-img">
+      </section>
+    </section>
+
+    <p class="footer-p">Desenvolvido por : Kelvyn Khrystian © Todos os direitos reservados</p>
+  </footer>
 
 
   
