--- a/index.html
+++ b/index.html
@@ -74,6 +74,22 @@
         <button class="produto-btn"> Adicionar ao carrinho </button>
       </section>
 
+      <section class="produtos">
+        <img src="./imgs/produtos/longdrink.png" alt="caneca" class="produto-img">
+        <p class="produto-nome"> Copos Long Drink</p>
+        <p class="produto-tema"> A partir de</p>
+        <p class="produto-preco"> R$ 4,00 und </p>
+        <button class="produto-btn"> Adicionar ao carrinho </button>
+      </section>
+
+      <section class="produtos">
+        <img src="./imgs/produtos/corel.png" alt="corel" class="produto-img">
+        <p class="produto-nome"> Arte Corel</p>
+        <p class="produto-tema"> a partir de</p>
+        <p class="produto-preco"> R$ 5,00 </p>
+        <button class="produto-btn"> Adicionar ao carrinho </button>
+      </section>
+
     </article>
   </main>
 
