--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 
 
   
-  <script src="./script.js"></script>
+  <script type="module" src="./produtos.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
