--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     <section class="banner-box">
       <img src="./imgs/outros/banner01.png" alt="banner paladino" class="banner">
     </section>
+
+    <section>
+      <p></p>
+    </section>
     
     <article class="produtos-box">
 
