--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <section class="banner-box">
       <img src="./imgs/outros/banner01.png" alt="banner paladino" class="banner">
     </section>
+    <section class="banner-box2">
+      <img src="./imgs/outros/bannerPC.png" alt="banner paladino 2" class="banner">
+    </section>
 
     <section>
       <p></p>
